fix scroll on mobiles

--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,6 @@
 body {
   box-sizing: border-box;
   overflow:hidden;
-  overflow-y:hidden;
   overflow-x:hidden;
 }
 
@@ -69,7 +68,7 @@ main {
 /* Hero Section */
 .hero {
   width: 100%;
-  background-image: url('../assets/images/HeroSection.png');
+  background-image: url('./assets/images/HeroSection.png');
   background-position: center;
   background-repeat: no-repeat;
   min-height: 700px;
